# veo3free

./: AGENTS.MD  main.py  maincopy.py  pyproject.toml  version.py
.github/workflows/: build.yml
guide/: inject.js
server/: ws_routes.py
web-src/: package-lock.json  pnpm-lock.yaml
web-src/src/: App.tsx  lucide-react.d.ts  types.ts
web-src/src/components/: BatchTemplateModal.tsx
